--- a/list.html
+++ b/list.html
@@ -86,7 +86,51 @@
         <a href="#">Contact</a>&nbsp;&nbsp;&nbsp;&nbsp;
         <br>
         <h1>Welcome to my Website</h1>
-        <h2>Thus is my website page</h2>
+        <h2>This is my website page</h2>
     </nav>
+<table>
+    <tr>
+        <th>Time/Day</th>
+        <th>08:50-09:40</th>
+        <th>09:40-10:30</th>
+        <th>10:40-11:30</th>
+        <th>11:30-12:20</th>
+        </tr>
+        <tr>
+        <td>Monday</td>
+        <td>Soft Skills</td>
+        <td>Mathematics</td>
+        <td>Design Thinking</td>
+        <td>Web-Designing</td>
+</tr>
+<tr>
+    <td>Tuesday</td>
+    <td>Electronics</td>
+    <td>Mathematics</td>
+    <td>Electronics</td>
+    <td>Electronics</td>
+</tr>
+<tr>
+    <td>Wednesday</td>
+    <td>Mathematics</td>
+    <td>Design Thinking</td>
+    <td>Mechanical</td>
+    <td>Mechanical</td>
+</tr>
+<tr>
+    <td>Thursday</td>
+    <td>Mechanical</td>
+    <td>Electronics</td>
+    <td>Mathematics</td>
+    <td>Soft Skills</td>
+</tr>
+<tr>
+    <td>Friday</td>
+    <td>Web-Designing</td>
+    <td>Web-Designing</td>
+    <td>Mechanical</td>
+    <td>Mathematics</td>
+</tr>
+    </table>
 </body>
 </html>
